FEAT: Updated Upcoming Event Partial with Photos

--- a/app/views/schedules/_upcoming_event.html.erb
+++ b/app/views/schedules/_upcoming_event.html.erb
@@ -37,7 +37,7 @@
             <%= link_to athlete_path(recruit.athlete) do %>
               <% if recruit.athlete.grad_year == 2022 %>
                 <a href="/athletes/<%= recruit.athlete.id %>" class="list-group-item list-group-item-action list-group-item-danger d-flex justify-content-left">
-                  <%= image_tag "golf_girl.png", class: "avatar-xlarge-square mr-2" %>
+                  <%= image_tag recruit.athlete.photo, class: "avatar-xlarge-square mr-2" %>
                   <div>
                     <p><%= recruit.athlete.first_name %>  <%= recruit.athlete.last_name %></p>
                     <p class="text-white"><%= recruit.athlete.grad_year %></p>
@@ -46,7 +46,7 @@
                 </a>
               <% elsif recruit.athlete.grad_year == 2023 %>
                 <a href="/athletes/<%= recruit.athlete.id %>" class="list-group-item list-group-item-action list-group-item-primary d-flex justify-content-left">
-                  <%= image_tag "golf_girl.png", class: "avatar-xlarge-square mr-2" %>
+                  <%= image_tag recruit.athlete.photo, class: "avatar-xlarge-square mr-2" %>
                   <div>
                     <p><%= recruit.athlete.first_name %>  <%= recruit.athlete.last_name %></p>
                     <p class="text-white"><%= recruit.athlete.grad_year %></p>
@@ -55,7 +55,7 @@
                 </a>
               <% elsif recruit.athlete.grad_year == 2024 %>
                 <a href="/athletes/<%= recruit.athlete.id %>" class="list-group-item list-group-item-action list-group-item-info d-flex justify-content-left">
-                  <%= image_tag "golf_girl.png", class: "avatar-xlarge-square mr-2" %>
+                  <%= image_tag recruit.athlete.photo, class: "avatar-xlarge-square mr-2" %>
                   <div>
                     <p><%= recruit.athlete.first_name %>  <%= recruit.athlete.last_name %></p>
                     <p class="text-white"><%= recruit.athlete.grad_year %></p>
@@ -64,7 +64,7 @@
                 </a>
               <% else %>
                 <a href="/athletes/<%= recruit.athlete.id %>" class="list-group-item list-group-item-action list-group-item-success d-flex justify-content-left">
-                  <%= image_tag "golf_girl.png", class: "avatar-xlarge-square mr-2" %>
+                  <%= image_tag recruit.athlete.photo, class: "avatar-xlarge-square mr-2" %>
                   <div>
                     <p><%= recruit.athlete.first_name %>  <%= recruit.athlete.last_name %></p>
                     <p class="text-white"><%= recruit.athlete.grad_year %></p>
@@ -80,7 +80,7 @@
           <%= link_to athlete_path(@athlete) do %>
             <% if @athlete.grad_year == 2022 %>
               <a href="/athletes/<%= @athlete.id %>" class="list-group-item list-group-item-action list-group-item-danger d-flex justify-content-left">
-                <%= image_tag "golf_girl.png", class: "avatar-xlarge-square mr-2" %>
+                <%= image_tag athlete.photo, class: "avatar-xlarge-square mr-2" %>
                 <div>
                   <p><%= @athlete.first_name %>  <%= @athlete.last_name %></p>
                   <p class="text-white"><%= @athlete.grad_year %></p>
@@ -89,7 +89,7 @@
               </a>
             <% elsif @athlete.grad_year == 2023 %>
               <a href="/athletes/<%= @athlete.id %>" class="list-group-item list-group-item-action list-group-item-primary d-flex justify-content-left">
-                <%= image_tag "golf_girl.png", class: "avatar-xlarge-square mr-2" %>
+                <%= image_tag athlete.photo, class: "avatar-xlarge-square mr-2" %>
                 <div>
                   <p><%= @athlete.first_name %>  <%= @athlete.last_name %></p>
                   <p class="text-white"><%= @athlete.grad_year %></p>
@@ -98,7 +98,7 @@
               </a>
             <% elsif @athlete.grad_year == 2024 %>
               <a href="/athletes/<%= @athlete.id %>" class="list-group-item list-group-item-action list-group-item-info d-flex justify-content-left">
-                <%= image_tag "golf_girl.png", class: "avatar-xlarge-square mr-2" %>
+                <%= image_tag athlete.phto, class: "avatar-xlarge-square mr-2" %>
                 <div>
                   <p><%= @athlete.first_name %>  <%= @athlete.last_name %></p>
                   <p class="text-white"><%= @athlete.grad_year %></p>
@@ -107,7 +107,7 @@
               </a>
             <% else %>
               <a href="/athletes/<%= @athlete.id %>" class="list-group-item list-group-item-action list-group-item-success d-flex justify-content-left">
-                <%= image_tag "golf_girl.png", class: "avatar-xlarge-square mr-2" %>
+                <%= image_tag athlete.photo, class: "avatar-xlarge-square mr-2" %>
                 <div>
                   <p><%= @athlete.first_name %>  <%= @athlete.last_name %></p>
                   <p class="text-white"><%= @athlete.grad_year %></p>
