FIX: Broken Photo Link

--- a/app/views/events/_upcomingevent.html.erb
+++ b/app/views/events/_upcomingevent.html.erb
@@ -37,28 +37,28 @@
             <%= link_to athlete_path(recruit.athlete) do %>
               <% if recruit.athlete.grad_year == 2022 %>
                 <a href="/athletes/<%= recruit.athlete.id %>" class="calendar list-group-item list-group-item-action list-group-item-danger d-flex justify-content-left">
-                  <%= image_tag "golf_girl.png", class: "upcoming-avatar mr-3" %>
+                  <%= image_tag recruit.athlete.photo, class: "upcoming-avatar mr-3" %>
                   <p><%= recruit.athlete.first_name %>  <%= recruit.athlete.last_name %></p>
                     <p class="upcoming-rating"><i class="fa fa-arrow-up"></i> <%= recruit.athlete.rating %></p>
                     <p class="text-white"><%= recruit.athlete.grad_year %></p>
                 </a>
               <% elsif recruit.athlete.grad_year == 2023 %>
                 <a href="/athletes/<%= recruit.athlete.id %>" class="calendar list-group-item list-group-item-action list-group-item-primary d-flex justify-content-left">
-                  <%= image_tag "golf_girl.png", class: "upcoming-avatar mr-3" %>
+                  <%= image_tag recruit.athlete.photo, class: "upcoming-avatar mr-3" %>
                   <p><%= recruit.athlete.first_name %>  <%= recruit.athlete.last_name %></p>
                   <p class="upcoming-rating"><i class="fa fa-arrow-up"></i> <%= recruit.athlete.rating %></p>
                   <p class="text-white"><%= recruit.athlete.grad_year %></p>
                 </a>
               <% elsif recruit.athlete.grad_year == 2024 %>
                 <a href="/athletes/<%= recruit.athlete.id %>" class="calendar list-group-item list-group-item-action list-group-item-info d-flex justify-content-left">
-                  <%= image_tag "golf_girl.png", class: "upcoming-avatar mr-3" %>
+                  <%= image_tag recruit.athlete.photo, class: "upcoming-avatar mr-3" %>
                   <p><%= recruit.athlete.first_name %>  <%= recruit.athlete.last_name %></p>
                   <p class="upcoming-rating"><i class="fa fa-arrow-up"></i> <%= recruit.athlete.rating %></p>
                   <p class="text-white"><%= recruit.athlete.grad_year %></p>
                 </a>
               <% else %>
                 <a href="/athletes/<%= recruit.athlete.id %>" class="calendar list-group-item list-group-item-action list-group-item-success d-flex justify-content-left">
-                  <%= image_tag "golf_girl.png", class: "upcoming-avatar mr-3" %>
+                  <%= image_tag recruit.athlete.photo, class: "upcoming-avatar mr-3" %>
                   <p><%= recruit.athlete.first_name %>  <%= recruit.athlete.last_name %></p>
                   <p class="upcoming-rating"><i class="fa fa-arrow-up"></i> <%= recruit.athlete.rating %></p>
                   <p class="text-white"><%= recruit.athlete.grad_year %></p>
@@ -72,28 +72,28 @@
           <%= link_to athlete_path(@athlete) do %>
             <% if @athlete.grad_year == 2022 %>
               <a href="/athletes/<%= @athlete.id %>" class="calendar list-group-item list-group-item-action list-group-item-danger d-flex justify-content-left">
-                <%= image_tag "golf_girl2.jpg", class: "upcoming-avatar mr-3" %>
+                <%= image_tag athlete.photo, class: "upcoming-avatar mr-3" %>
                 <p><%= @athlete.first_name %>  <%= @athlete.last_name %></p>
                 <p class="upcoming-rating"><i class="fa fa-arrow-up"></i> <%= @athlete.rating %></p>
                 <p class="text-white"><%= @athlete.grad_year %></p>
               </a>
             <% elsif @athlete.grad_year == 2023 %>
               <a href="/athletes/<%= @athlete.id %>" class="calendar list-group-item list-group-item-action list-group-item-primary d-flex justify-content-left">
-                <%= image_tag "golf_girl2.jpg", class: "upcoming-avatar mr-3" %>
+                <%= image_tag athlete.photo, class: "upcoming-avatar mr-3" %>
                 <p><%= @athlete.first_name %>  <%= @athlete.last_name %></p>
                 <p class="upcoming-rating"><i class="fa fa-arrow-up"></i> <%= @athlete.rating %></p>
                 <p class="text-white"><%= @athlete.grad_year %></p>
               </a>
             <% elsif @athlete.grad_year == 2024 %>
               <a href="/athletes/<%= @athlete.id %>" class="calendar list-group-item list-group-item-action list-group-item-info d-flex justify-content-left">
-                <%= image_tag "golf_girl2.jpg", class: "upcoming-avatar mr-3" %>
+                <%= image_tag athete.photo, class: "upcoming-avatar mr-3" %>
                 <p><%= @athlete.first_name %>  <%= @athlete.last_name %></p>
                 <p class="upcoming-rating"><i class="fa fa-arrow-up"></i> <%= @athlete.rating %></p>
                 <p class="text-white"><%= @athlete.grad_year %></p>
               </a>
             <% else %>
               <a href="/athletes/<%= @athlete.id %>" class="calendar list-group-item list-group-item-action list-group-item-success d-flex justify-content-left">
-                <%= image_tag "golf_girl2.jpg", class: "upcoming-avatar mr-3" %>
+                <%= image_tag athlete.photo, class: "upcoming-avatar mr-3" %>
                 <p><%= @athlete.first_name %>  <%= @athlete.last_name %></p>
                 <p class="upcoming-rating"><i class="fa fa-arrow-up"></i> <%= @athlete.rating %></p>
                 <p class="text-white"><%= @athlete.grad_year %></p>
