--- a/app/views/recruits/_recruits.html.erb
+++ b/app/views/recruits/_recruits.html.erb
@@ -31,7 +31,7 @@
                   <td>
                     <%= link_to athlete_path(recruit.athlete) do %>
                       <div class='d-flex justify-content-start'>
-                          <%= cl_image_tag recruit.athlete.photo, class: 'avatar-small' %>
+                          <%= image_tag recruit.athlete.photo, class: 'avatar-small' %>
                         <span class='name d-flex ml-4'>
                           <%= recruit.athlete.first_name %> <%= recruit.athlete.last_name %>
                         </span>
@@ -47,7 +47,7 @@
                   <td>
                   <%= link_to athlete_path(recruit.athlete) do %>
                     <div class='d-flex justify-content-start'>
-                      <%= cl_image_tag recruit.athlete.photo, class: 'avatar-small' %>
+                      <%= image_tag recruit.athlete.photo, class: 'avatar-small' %>
                       <span class='name d-flex ml-4'>
                         <%= recruit.athlete.first_name %> <%= recruit.athlete.last_name %>
                       </span>
@@ -63,7 +63,7 @@
                   <td>
                   <%= link_to athlete_path(recruit.athlete) do %>
                     <div class='d-flex justify-content-start'>
-                      <%= cl_image_tag recruit.athlete.photo, class: 'avatar-small' %>
+                      <%= image_tag recruit.athlete.photo, class: 'avatar-small' %>
                       <span class='name d-flex ml-4'>
                         <%= recruit.athlete.first_name %> <%= recruit.athlete.last_name %>
                       </span>
@@ -79,7 +79,7 @@
                   <td>
                   <%= link_to athlete_path(recruit.athlete) do %>
                     <div class='d-flex justify-content-start'>
-                      <%= cl_image_tag recruit.athlete.photo, class: 'avatar-small' %>
+                      <%= image_tag recruit.athlete.photo, class: 'avatar-small' %>
                       <span class='name d-flex ml-4'>
                         <%= recruit.athlete.first_name %> <%= recruit.athlete.last_name %>
                       </span>
