--- a/app/views/recruits/index.html.erb
+++ b/app/views/recruits/index.html.erb
@@ -30,7 +30,7 @@
                 <tr class="recruit-table-content table-danger">
                   <%= link_to athlete_path(recruit.athlete) do %>
                   <td>
-                    <%= cl_image_tag recruit.athlete.photo, class: 'avatar-small' %>
+                    <%= image_tag recruit.athlete.photo, class: 'avatar-small' %>
                     <%= recruit.athlete.first_name %> <%= recruit.athlete.last_name %>
                   </td>
                   <% end %>
@@ -53,7 +53,7 @@
                 <tr class="recruit-table-content table-primary">
                   <%= link_to athlete_path(recruit.athlete) do %>
                   <td>
-                    <%= cl_image_tag recruit.athlete.photo, class: 'avatar-small' %>
+                    <%= image_tag recruit.athlete.photo, class: 'avatar-small' %>
                     <%= recruit.athlete.first_name %> <%= recruit.athlete.last_name %>
                   </td>
                   <% end %>
@@ -77,7 +77,7 @@
                 <tr class="recruit-table-content table-info">
                   <%= link_to athlete_path(recruit.athlete) do %>
                     <td>
-                    <%= cl_image_tag recruit.athlete.photo, class: 'avatar-small' %>
+                    <%= image_tag recruit.athlete.photo, class: 'avatar-small' %>
                       <%= recruit.athlete.first_name %> <%= recruit.athlete.last_name %>
                     </td>
                   <% end %>
@@ -101,7 +101,7 @@
                 <tr class="recruit-table-content table-success">
                   <%= link_to athlete_path(recruit.athlete) do %>
                     <td>
-                    <%= cl_image_tag recruit.athlete.photo, class: 'avatar-small' %>
+                    <%= image_tag recruit.athlete.photo, class: 'avatar-small' %>
                     <%= recruit.athlete.first_name %> <%= recruit.athlete.last_name %>
                     </td>
                   <% end %>
