FIX: More Broken Photo Links

--- a/app/views/athletes/_athletes.html.erb
+++ b/app/views/athletes/_athletes.html.erb
@@ -18,7 +18,7 @@
 
           <tr>
             <td>
-                <%= cl_image_tag athlete.photo, class: 'avatar-small mr-2' %>
+                <%= image_tag athlete.photo, class: 'avatar-small mr-2' %>
                 <%= athlete.first_name %> <%= athlete.last_name %>
             </td>
             <% case athlete.grad_year %>
