--- a/app/views/athletes/show.html.erb
+++ b/app/views/athletes/show.html.erb
@@ -10,7 +10,7 @@
        <!--  <%#= link_to athlete_recruit_path(@athlete.recruit.id.to_i - 1) do %><i class="fas fa-reply">Previous Athlete</i><%# end %> -->
 
         <div>
-          <%= cl_image_tag athlete.photo, class: "card-img-top" %>
+          <%= image_tag athlete.photo, class: "card-img-top" %>
         </div>
 
         <div>
