--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -43,7 +43,7 @@
         <%= link_to athlete_path(recruit.athlete) do %>
         <% if recruit.athlete.grad_year == 2022 %>
         <a href="/athletes/<%= recruit.athlete.id %>" class="list-group-item list-group-item-action list-group-item-danger d-flex justify-content-left">
-          <%= cl_image_tag recruit.athlete.photo, class: "avatar-xlarge-square mr-2" %>
+          <%= image_tag recruit.athlete.photo, class: "avatar-xlarge-square mr-2" %>
           <div>
             <p><%= recruit.athlete.first_name %>  <%= recruit.athlete.last_name %></p>
             <p class="text-white"><%= recruit.athlete.grad_year %></p>
@@ -52,7 +52,7 @@
         </a>
         <% elsif recruit.athlete.grad_year == 2023 %>
         <a href="/athletes/<%= recruit.athlete.id %>" class="list-group-item list-group-item-action list-group-item-primary d-flex justify-content-left">
-          <%= cl_image_tag recruit.athlete.photo, class: "avatar-xlarge-square mr-2" %>
+          <%= image_tag recruit.athlete.photo, class: "avatar-xlarge-square mr-2" %>
           <div>
             <p><%= recruit.athlete.first_name %>  <%= recruit.athlete.last_name %></p>
             <p class="text-white"><%= recruit.athlete.grad_year %></p>
@@ -61,7 +61,7 @@
         </a>
         <% elsif recruit.athlete.grad_year == 2024 %>
         <a href="/athletes/<%= recruit.athlete.id %>" class="list-group-item list-group-item-action list-group-item-info d-flex justify-content-left">
-          <%= cl_image_tag recruit.athlete.photo, class: "avatar-xlarge-square mr-2" %>
+          <%= image_tag recruit.athlete.photo, class: "avatar-xlarge-square mr-2" %>
           <div>
             <p><%= recruit.athlete.first_name %>  <%= recruit.athlete.last_name %></p>
             <p class="text-white"><%= recruit.athlete.grad_year %></p>
@@ -70,7 +70,7 @@
         </a>
         <% else %>
         <a href="/athletes/<%= recruit.athlete.id %>" class="list-group-item list-group-item-action list-group-item-success d-flex justify-content-left">
-          <%= cl_image_tag recruit.athlete.photo, class: "avatar-xlarge-square mr-2" %>
+          <%= image_tag recruit.athlete.photo, class: "avatar-xlarge-square mr-2" %>
           <div>
             <p><%= recruit.athlete.first_name %>  <%= recruit.athlete.last_name %></p>
             <p class="text-white"><%= recruit.athlete.grad_year %></p>
@@ -86,7 +86,7 @@
         <%= link_to athlete_path(@athlete) do %>
         <% if @athlete.grad_year == 2022 %>
         <a href="/athletes/<%= @athlete.id %>" class="list-group-item list-group-item-action list-group-item-danger d-flex justify-content-left">
-          <%= cl_image_tag athlete.photo, class: "avatar-xlarge-square mr-2" %>
+          <%= image_tag athlete.photo, class: "avatar-xlarge-square mr-2" %>
           <div>
             <p><%= @athlete.first_name %>  <%= @athlete.last_name %></p>
             <p class="text-white"><%= @athlete.grad_year %></p>
@@ -95,7 +95,7 @@
         </a>
         <% elsif @athlete.grad_year == 2023 %>
         <a href="/athletes/<%= @athlete.id %>" class="list-group-item list-group-item-action list-group-item-primary d-flex justify-content-left">
-          <%= cl_image_tag athlete.photo, class: "avatar-xlarge-square mr-2" %>
+          <%= image_tag athlete.photo, class: "avatar-xlarge-square mr-2" %>
           <div>
             <p><%= @athlete.first_name %>  <%= @athlete.last_name %></p>
             <p class="text-white"><%= @athlete.grad_year %></p>
@@ -104,7 +104,7 @@
         </a>
         <% elsif @athlete.grad_year == 2024 %>
         <a href="/athletes/<%= @athlete.id %>" class="list-group-item list-group-item-action list-group-item-info d-flex justify-content-left">
-          <%= cl_image_tag athlete.photo, class: "avatar-xlarge-square mr-2" %>
+          <%= image_tag athlete.photo, class: "avatar-xlarge-square mr-2" %>
           <div>
             <p><%= @athlete.first_name %>  <%= @athlete.last_name %></p>
             <p class="text-white"><%= @athlete.grad_year %></p>
@@ -113,7 +113,7 @@
         </a>
         <% else %>
         <a href="/athletes/<%= @athlete.id %>" class="list-group-item list-group-item-action list-group-item-success d-flex justify-content-left">
-          <%= cl_image_tag athlete.photo, class: "avatar-xlarge-square mr-2" %>
+          <%= image_tag athlete.photo, class: "avatar-xlarge-square mr-2" %>
           <div>
             <p><%= @athlete.first_name %>  <%= @athlete.last_name %></p>
             <p class="text-white"><%= @athlete.grad_year %></p>
