--- a/app/views/athletes/index.html.erb
+++ b/app/views/athletes/index.html.erb
@@ -22,7 +22,7 @@
           <tr class="athlete-table-content">
             <th scope='row'>
               <div class='d-flex justify-content-start'>
-                <%= cl_image_tag athlete.photo, class: 'avatar' %>
+                <%= image_tag athlete.photo, class: 'avatar' %>
               <span class='name d-flex ml-4'>
                   <%= athlete.first_name %> <%= athlete.last_name %>
               </span>
