--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -36,7 +36,7 @@
             <%= render 'athletes/athletes'%>
           </div>
           <div class="col-xl-5">
-            <%= render partial: 'recruits/recruits' %>
+            <%= render 'recruits/recruits' %>
           </div>
         </div>
       </div>
