--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -18,12 +18,13 @@
     </div>
 
     <div class="event-show-middle p-3 d-flex justify-content-around mb-4">
-      <% schedule_event = ScheduleEvent.find_by event: @event, schedule: @schedule %>
+      <% @schedule_event = ScheduleEvent.find_by event: @event, schedule: @schedule %>
       <% team_members = [] %>
       <% current_user.team.users.each do |user| %>
       <% team_members << (@user = user.first_name) if user.unavailable_days.map { |ud_hash| ud_hash[:date] }.exclude?(@event.start_date) %>
       <% end %>
-      <%= render partial: 'shared/assignedform', locals: { event: @event, schedule: @schedule, schedule_event: schedule_event, team_members: team_members} %>
+      <h2 class="text-grey"><%= @schedule_event.user.first_name if @schedule_event.user %></h2>
+      <%= render partial: 'shared/assignedform', locals: { event: @event, schedule: @schedule, schedule_event: @schedule_event, team_members: team_members} %>
     </div>
 
     <div class="event-show-middle p-3 d-flex justify-content-around">
