--- a/app/assets/stylesheets/athletes/show.scss
+++ b/app/assets/stylesheets/athletes/show.scss
@@ -1,8 +1,7 @@
 .athlete-show {
-  // margin: auto;
-  width: 60%;
+  width: 80%;
   height: 100%;
-  margin: -30% auto auto auto;
+  margin: auto;
 
   a {
     color: #d57149;
