FIX: athelte show card made equal

--- a/app/assets/stylesheets/athletes/show.scss
+++ b/app/assets/stylesheets/athletes/show.scss
@@ -29,6 +29,8 @@
 }
 
 .athlete-show-card {
+  width: 1000px;
+  height: 500px;
   border-radius: 20px;
   background-color: $baby-powder;
   padding: 30px;
