--- a/app/views/athletes/show.html.erb
+++ b/app/views/athletes/show.html.erb
@@ -1,6 +1,6 @@
-<div class="my-5 py-2">
+<div class="my-4">
 
-  <div class="athlete-show">
+  <div class="mb-5 athlete-show">
     <div class="d-flex align-items-center pt-5">
       <%= link_to athlete_path(@athlete.id.to_i - 1), class: "mr-5" do %><i class="fas fa-reply"></i><% end %>
 
