FEAT: removed calendar btn from dashboard of assistant coach.

--- a/app/views/recruits/_recruits.html.erb
+++ b/app/views/recruits/_recruits.html.erb
@@ -4,7 +4,9 @@
                    <!--  <div class="table-responsive"> -->
         <div class="recruit-index-top-table container">
           <div class="btn-group d-flex justify-content-between align-items-center w-70">
-            <%= link_to 'Schedule', schedules_path, class: "gen-sch btn-sm p-2 rounded" %>
+            <% if policy(@recruit).create? %>
+              <%= link_to 'Schedule', schedules_path, class: "gen-sch btn-sm p-2 rounded" %>
+            <% end %>
             <h1 class="dashboard-recruit-heading">My Recruits</h1>
             <%= link_to 'Detailed List', recruits_path, class: "full-li btn-sm p-2 rounded" %>
           </div>
